<resources>
    <string name="app_name">Metrorex</string>
    <string name="Username">Email</string>
    <string name="username_hint">Email</string>
    <string name="password">Password</string>
    <string name="login">   Login   </string>
    <string name="register_user">   Register   </string>
    <string name="singing">Already registered? Sign in here.</string>
    <string name="tvlogin">Don\'t have an account yet ? Register here.</string>
    <string name="tipabonament">Abonament:</string>
    <string name="credit">Credit:</string>
    <string name="cumpara">Cumpara Credit</string>
    <string name="babonament">CUMPARA ABONAMENT</string>
    <string name="title_activity_profile_drawer">ProfileDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_start_gif">Metrorex</string>

    <string name="facebook_app_id">1856373824608092</string>
    <string name="fb_login_protocol_scheme">fb1856373824608092</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="fieldsRequired">All fields required</string>
    <string name="cumpara_bilet_sau_abonament">Cu aceste credite poti calatorii sau abonamente</string>
    <string name="first_name_hint">Nume</string>
    <string name="Change_password">Change password</string>
    <string name="button_update_profile_text">Update</string>
    <string name="cumpara_calatorii">Aceste calatorii va permit accesul doar scanand codul.</string>
    <string name="cumpara_abonament">Acest abonament va permite acces nelimitat.</string>
</resources>
