<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/water_login"
    tools:context="com.filote.cosmin1.metrorex.Activities.LoginRegister">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:textSize="15dp"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"

         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:id="@+id/etusernamelogin"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/white"
        android:textSize="30sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/tvpassword"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/etusernamelogin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:padding="5dp"
        android:id="@+id/etpasswordlogin"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tvpassword"
        android:textSize="30sp"
        android:layout_alignStart="@+id/etusernamelogin" />


    <ImageView
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/metrorex_sigla"
        android:id="@+id/imageView"
        android:layout_above="@+id/LoginFacebookBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/buttonLogin"
        android:background="@drawable/border_button"
        android:layout_marginTop="21dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@+id/etpasswordlogin"
        android:layout_alignStart="@+id/imageView" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/LoginFacebookBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/errorTextView"
        android:layout_centerHorizontal="true"
        facebook:paddingStart="20dp"
        facebook:paddingEnd="20dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvlogin"
        android:id="@+id/tvlogin"
        android:textColor="@color/white"
        android:layout_alignBaseline="@+id/errorTextView"
        android:layout_alignBottom="@+id/errorTextView"
        android:layout_centerHorizontal="true" />







    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/errorColor"
        android:padding="10dp"
        android:text="@string/fieldsRequired"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
