<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/global_blue_background"
    tools:context="com.filote.cosmin1.metrorex.Activities.LoginRegister">


    <TextView
        android:text="User Register"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/imageView"
        android:layout_alignEnd="@+id/tvpassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:layout_alignBaseline="@+id/username"
        android:layout_alignBottom="@+id/username"
        android:layout_toEndOf="@+id/username"
        android:layout_marginStart="43dp"
        android:id="@+id/etusername"
        android:background="@drawable/border"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp"
        android:layout_below="@+id/username"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/tvpassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_alignBaseline="@+id/tvpassword"
        android:layout_alignBottom="@+id/tvpassword"
        android:layout_toEndOf="@+id/username"
        android:id="@+id/etpassword"
        android:layout_alignStart="@+id/etusername"
        android:inputType="textPassword"/>





    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:id="@+id/buttonRegister"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_button"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@+id/etpassword"
        android:layout_centerHorizontal="true" />



    <ImageView
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/metrorex_sigla"


        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
